--- a/apps/templates/wagtailadmin/home.html
+++ b/apps/templates/wagtailadmin/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/readux2.scss' %}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.13.7/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.13.7/js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="{% static 'wagtailadmin/css/layouts/home.css' %}" type="text/css" />
