--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -3,14 +3,13 @@
         <div uk-navbar="mode: click">
             <div class="uk-navbar-left">
                 <div class="uk-logo">
-                    <div><a style="font-size: large; color: white; font-weight: bold;">Sounding Spirit</a></div>
-                    <div style="font-size: small; color: white; ">built on <a
-                            style="color: white; text-decoration: underline;">Readux</a></div>
+                    <div><a class="brand-logo" href="/">Sounding Spirit</a></div>
+                    <div class="brand-tagline">built on <a class="brand-readux">Readux</a></div>
                 </div>
 
                 <ul class="uk-navbar-nav">
-                    <li class=""><a href="#" class="menu-item">Collections</a></li>
-                    <li class=""><a href="#" class="menu-item">Volumes</a></li>
+                    <li class=""><a href="/all-collections/" class="menu-item">Collections</a></li>
+                    <li class=""><a href="/all-volumes/" class="menu-item">Volumes</a></li>
                     <li>
                         <a href="#" class="menu-item">About <span uk-drop-parent-icon></span></a>
                         <div class="uk-navbar-dropdown">
