--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -4,6 +4,9 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+
+<h1>WARNING </h1>
+
 <div class="rx-title-container">
   <ul class="rx-breadcrumb uk-text-truncate">
     <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
