--- a/apps/templates/pages/home.html
+++ b/apps/templates/pages/home.html
@@ -1,1 +1,13 @@
 {% extends "base.html" %}
+
+{% if request.path == '/' %}
+<div class="overlay"></div>
+{% include '_home/_nav.html' %}
+{% include '_home/_hero.html' %}
+{% include '_home/_featured_story.html' %}
+{% include '_home/_featured_volumes.html' %}
+{% include '_home/_featured_volumes.html' %}
+{% include '_home/_video.html' %}
+{% include '_home/_highlights.html' %}
+{% include '_home/_footer.html' %}
+{% endif %}
