--- a/apps/templates/_home/_hero.html
+++ b/apps/templates/_home/_hero.html
@@ -2,10 +2,5 @@
     <h1 class="uk-heading-primary" style="color: white; font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">
         Sounding Spirit</h1>
     <p class="uk-text-lead" style="color: white; ">where sacred songbooks meet digital innovation</p>
-    <div class="search-bar" style="margin: 1rem auto;">
-        <input class="uk-input" type="text" placeholder="Search...">
-        <button class="uk-button">
-            Search
-        </button>
-    </div>
+    {% include "snippets/_search_box.html" %}
 </div>
