--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -12,7 +12,7 @@
                     <li class=""><a href="/all-volumes/" class="menu-item">Volumes</a></li>
                     <li>
                         <a href="#" class="menu-item">About <span uk-drop-parent-icon></span></a>
-                        <div class="uk-navbar-dropdown">
+                        <div class="uk-navbar-dropdown uk-padding-remove" uk-dropdown="mode: click; pos: bottom-left; offset: -20;">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                 <li class="uk-active"><a href="#">What is Sounding Spirit?</a></li>
                                 <li><a href="#">What is Readux?</a></li>
