--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -49,7 +49,7 @@
   {% include "snippets/_volumes_page_information.html" %}
 
   <!-- Volume Grid -->
-  <div class="volume-grid uk-margin-large-bottom">
+  <div class="uk-grid-match uk-child-width-1-4@m uk-margin-large-bottom" uk-grid>
     <!-- Volume Item -->
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 1">
